--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,1 +1,5 @@
-<h1>Sign in</h1>
+<div class="container">
+  <h1>My Webmail</h1>
+  <button id="authorize-button" class="btn btn-primary" ng-click="authClick()"; >Authorize</button>
+</div>
+<!--<script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>-->
