--- a/templates/leftPanel.html
+++ b/templates/leftPanel.html
@@ -1,7 +1,44 @@
 <div class="section-border">
-  <div><a ui-sref="index.compose" class="btn btn-primary">Compose</a></div>
+
+<div><a href="#compose-modal"
+   data-toggle="modal"
+   id="compose-button"
+   class="btn btn-primary pull-right">Compose</a></div>
+
   <div><a ui-sref="index.inbox">Inbox</a></div>
   <div><a ui-sref="index.starred">Starred</a></div>
   <div><a ui-sref="index.sent">Sent Mail</a></div>
   <div><a ui-sref="index.draft">Drafts</a></div>
 </div>
+
+   <div class="modal fade" id="compose-modal" tabindex="-1" role="dialog">
+    <div class="modal-dialog modal-lg">
+      <div class="modal-content">
+        <div class="modal-header">
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+          <h4 class="modal-title">Compose</h4>
+        </div>
+        <form ng-submit="sendEmail()">
+          <div class="modal-body">
+            <div class="form-group">
+              <input type="email" class="form-control" id="compose-to" placeholder="To" required />
+            </div>
+
+            <div class="form-group">
+              <input type="text" class="form-control" id="compose-subject" placeholder="Subject" required />
+            </div>
+
+            <div class="form-group">
+              <textarea class="form-control" id="compose-message" placeholder="Message" rows="10" required></textarea>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            <button type="submit" id="send-button" class="btn btn-primary">Send</button>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
