--- a/templates/leftPanel.html
+++ b/templates/leftPanel.html
@@ -42,3 +42,37 @@
       </div>
     </div>
   </div>
+
+  <div class="modal fade" id="reply-modal" tabindex="-1" role="dialog">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title">Reply</h4>
+      </div>
+      <form onsubmit="return sendReply();">
+        <input type="hidden" id="reply-message-id" />
+
+        <div class="modal-body">
+          <div class="form-group">
+            <input type="text" class="form-control" id="reply-to" disabled />
+          </div>
+
+          <div class="form-group">
+            <input type="text" class="form-control disabled" id="reply-subject" disabled />
+          </div>
+
+          <div class="form-group">
+            <textarea class="form-control" id="reply-message" placeholder="Message" rows="10" required></textarea>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          <button type="submit" id="reply-button" class="btn btn-primary">Send</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
