--- a/templates/sent.html
+++ b/templates/sent.html
@@ -1,3 +1,12 @@
-<div class="section-border">
-  <h1>Sent stuff goes here</h1>
+<div class="container">
+  <table class="table table-striped table-inbox">
+    <thead>
+      <tr>
+        <th>From</th>
+        <th>Subject</th>
+        <th>Date/Time</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
 </div>
