inbox, sent, starred, drafts working

--- a/templates/leftPanel.html
+++ b/templates/leftPanel.html
@@ -1,6 +1,5 @@
-<div class="section-border">
 
-<div><a href="#compose-modal"
+<div class="col-xs-12"><a href="#compose-modal"
    data-toggle="modal"
    id="compose-button"
    class="btn btn-primary pull-right">Compose</a></div>
@@ -75,4 +74,4 @@
       </form>
     </div>
   </div>
-</div>
+
