--- a/templates/leftPanel.html
+++ b/templates/leftPanel.html
@@ -1,13 +1,15 @@
+<div class="row" style="margin: 15px 15px 0 0">
+  <div class="col-xs-12" style="margin: 15px 0">
+    <a href="#compose-modal"
+     data-toggle="modal"
+     id="compose-button"
+     class="btn btn-primary">Compose</a>
+  </div>
 
-<div class="col-xs-12"><a href="#compose-modal"
-   data-toggle="modal"
-   id="compose-button"
-   class="btn btn-primary pull-right">Compose</a></div>
-
-  <div><a ui-sref="index.inbox">Inbox</a></div>
-  <div><a ui-sref="index.starred">Starred</a></div>
-  <div><a ui-sref="index.sent">Sent Mail</a></div>
-  <div><a ui-sref="index.draft">Drafts</a></div>
+  <div clas="col-xs-12" style="margin-top: 10px"><a ui-sref="index.inbox">Inbox</a></div>
+  <div clas="col-xs-12" style="margin-top: 10px"><a ui-sref="index.starred">Starred</a></div>
+  <div clas="col-xs-12" style="margin-top: 10px"><a ui-sref="index.sent">Sent Mail</a></div>
+  <div clas="col-xs-12" style="margin-top: 10px"><a ui-sref="index.draft">Drafts</a></div>
 </div>
 
    <div class="modal fade" id="compose-modal" tabindex="-1" role="dialog">
@@ -42,7 +44,7 @@
     </div>
   </div>
 
-  <div class="modal fade" id="reply-modal" tabindex="-1" role="dialog">
+<div class="modal fade" id="reply-modal" tabindex="-1" role="dialog">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
       <div class="modal-header">
@@ -74,4 +76,4 @@
       </form>
     </div>
   </div>
-
+</div>
