finished for now

--- a/templates/signin.html
+++ b/templates/signin.html
@@ -1,5 +1,5 @@
-<div class="container">
-  <h1>My Webmail</h1>
+<div class="container col-xs-offset-4 col-xs-4 ">
+  <h1>Welcome to Vmail</h1>
   <button id="authorize-button" class="btn btn-primary" ng-click="authClick()"; >Authorize</button>
 </div>
 <!--<script src="https://apis.google.com/js/client.js?onload=handleClientLoad"></script>-->
