--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -6,8 +6,8 @@
       </a>
     </div>
     <div class="navbar-text pull-right">
-      <a  class="navbar-link" href="#">Testname</a>
-      <a  class="navbar-link" href="#">Sign Out</a>
+      <a  class="navbar-link" href="#" style="padding: 10px">Bob</a>
+      <a  class="navbar-link" href="#" style="border-left: 1px solid gray; padding: 10px">Sign Out</a>
     </div>
   </div>
 </nav>
